--- a/floatad.html
+++ b/floatad.html
@@ -17,7 +17,6 @@
             vertical-align: middle;
             background-image: url(https://vfiles.gtimg.cn/vupload/202004/1229c71588127756278.png);
             background-size: cover;
-            /*  */
         }
 
         #ClickRemoveFlo {
@@ -115,9 +114,9 @@
         <img src="https://puui.qpic.cn/vshpic/0/D38BE39F19B790561C5692BC35A75E231586916333/0?max_age=7776000" /> 
             </a>
         <span id="ClickRemoveFlo">X</span>
-        <div id="floattext">
+        <!-- <div id="floattext">
             <a href="https://m.v.qq.com/activity/h5/303_index/index.html?actityId=107015" target="_blank">为陈卓璇撑腰</a>
-        </div>
+        </div> -->
     </div>
 </body>
 
